Opened 5 years ago

Closed 5 years ago

Last modified 5 years ago

#15500 closed bug (fixed)

[broadcom43xx] crashes in bus_dma_tag_create

Reported by: ionmich Owned by: waddlesplash
Priority: normal Milestone: R1/beta2
Component: Drivers/Network/broadcom43xx Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

Burned a DVD from the latest nightly download. Booted to a difficult to read text screen with…

PANIC:ASSERT FAILED (…/…/haiku/src/system/kernel/slab/MemoryManager.cpp:736):(add_t)pages==_ChunkAddress(metChunk,chunk)

…followed by many long addresses and reports which would take hours to copy by hand. I saw no way of copying or sending them to a file.

Attachments (2)

DSCN0323.JPG (458.5 KB ) - added by ionmich 5 years ago.
Best I could do.
panic.png (262.4 KB ) - added by diver 5 years ago.

Download all attachments as: .zip

Change History (10)

comment:1 by waddlesplash, 5 years ago

Just take a picture and attach it here.

by ionmich, 5 years ago

Attachment: DSCN0323.JPG added

Best I could do.

comment:2 by diver, 5 years ago

Component: Build SystemDrivers/Network/broadcom43xx
Owner: changed from bonefish to waddlesplash
Status: newassigned

comment:3 by diver, 5 years ago

Could it be related to hrev53592? Does it crash with hrev53591 or earlier?

comment:4 by diver, 5 years ago

Summary: 64bit install fails[broadcom43xx] crashes in bus_dma_tag_create

comment:5 by waddlesplash, 5 years ago

Resolution: fixed
Status: assignedclosed

Fixed in hrev53610. Thanks for reporting!

comment:6 by diver, 5 years ago

Resolution: fixed
Status: closedreopened

With this fix it now crashes in pcnet driver:

by diver, 5 years ago

Attachment: panic.png added

comment:7 by waddlesplash, 5 years ago

Resolution: fixed
Status: reopenedclosed

Fixed again in hrev53612.

comment:8 by nielx, 5 years ago

Milestone: UnscheduledR1/beta2

Assign tickets with status=closed and resolution=fixed within the R1/beta2 development window to the R1/beta2 Milestone

Note: See TracTickets for help on using tickets.